--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
     background-position: top;
     background-repeat: no-repeat;
     background-color: var(--pale-blue);
+    background-size: contain;
     height: 100vh;
     width: 100%;
 }
