--- a/style.css
+++ b/style.css
@@ -27,10 +27,10 @@ body {
     background-size: contain;
     height: 100vh;
     width: 100%;
+    padding: 1.5rem;
 }
 .card {
     background-color: white;
-    max-width: 365px;
     min-width: 300px;
     border-radius: 20px;
     display: flex;
@@ -138,20 +138,7 @@ a {
         background-repeat: no-repeat;
         background-color: var(--pale-blue);
     }
-    .order-info {
-        padding: 2rem 2.5rem;
-    }
-    .order-summary p {
-        margin-bottom: 1rem;
-    }
-    .submit button {
-        padding: .7rem 1rem;
-        font-size: .79rem;
-    }
-    .submit a {
-        font-size: .8rem;
-    }
-    .icon-planbox img {
-        width: 2.4rem;
+    .card {
+        max-width: 400px;
     }
 }
