--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
     background-size: contain;
     height: 100vh;
     width: 100%;
-    padding: 1.5rem;
+    padding: 0 1.5rem;
 }
 .card {
     background-color: white;
