--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
     background-size: contain;
     height: 100vh;
     width: 100%;
-    padding: 0 1.5rem;
+    padding: 1.5rem;
 }
 .card {
     background-color: white;
@@ -69,7 +69,7 @@ body {
     width: 100%;
     margin-bottom: 1.5rem;
 }
-.plan h3 {
+.plan h2 {
     font-size: .9rem;
     font-weight: 900;
 }
