--- a/style.css
+++ b/style.css
@@ -139,6 +139,9 @@ a {
         background-color: var(--pale-blue);
     }
     .card {
-        max-width: 400px;
+        max-width: 425px;
+    }
+    .order-info {
+        padding: 2.5rem;
     }
 }
